--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -30,9 +30,11 @@ body {
     padding: 15px 20px;
     color: #fff;
     font-size: 15px;
+    text-decoration: none;
 }
 
-#myHeader .navbar-nav a:hover {
+#myHeader .navbar-nav a:hover,
+#myHeader .navbar-nav a:focus {
     margin-right: 10px;
     margin-left: 10px;
     padding-right: 0;
@@ -44,11 +46,7 @@ body {
     letter-spacing: 1px;
     cursor: pointer;
     transition: all .5s;
-}
-
-#myHeader .navbar-nav a:focus {
-    background-color: #c5cae9;
-    color: #3f51b5;
+    text-decoration: none;
 }
 
 #myHeader .navbar-toggle .icon-bar {
@@ -68,6 +66,10 @@ body {
 
 #myHeader .carousel {
     margin-top: 16px;
+}
+
+#myHeader .carousel-inner {
+    box-shadow: 0px 0px 10px #222222;
 }
 
 #myHeader .carousel-caption {
@@ -149,16 +151,19 @@ body {
     background: #f3e5f5;
     color: #333;
     font-size: 1.25em;
-    border-left: 8px solid #9c27b0;
-    border-right: 8px solid #9c27b0;
-    border-bottom: 8px solid #9c27b0;
+    border-left: 4px solid #9c27b0;
+    border-right: 4px solid #9c27b0;
+    border-bottom: 4px solid #9c27b0;
     transition: all 1s;
 }
 
 #myHeader #welcome img {
-    padding: 5px 10px 0 0;
+    padding: 0px 0px 0 0;
     width: 16rem;
     text-align: center;
+    border-right: 3px solid #222222;
+    border-top: 3px solid #222222;
+    margin-right: 10px;
 }
 
 #myHeader #welcome p {
@@ -336,6 +341,7 @@ body {
 
 #myContent .panel-heading {
     background: #ec407a;
+    border-radius: 5px;
 }
 
 #myContent .panel-body {
@@ -349,9 +355,11 @@ body {
 }
 
 #myContent #collapse-1 video {
-    padding: 1px 10px 0 0;
-    width: 15rem;
+    padding: 0px 0px 0 0;
+    width: 14rem;
     border-radius: 15px;
+    border: 1px solid #e91e63;
+    margin-right: 10px;
 }
 
 #myContent #collapse-2 .well {
@@ -362,7 +370,7 @@ body {
 #myContent #collapse-2 img {
     float: right;
     padding: 1px 0 0 10px;
-    width: 13em;
+    width: 19rem;
     border-radius: 25px;
 }
 
@@ -374,7 +382,7 @@ body {
 #myContent #collapse-3 img {
     float: right;
     padding: 1px 0 0 10px;
-    width: 13em;
+    width: 20rem;
     border-radius: 25px;
 }
 
@@ -385,13 +393,13 @@ body {
 
 #myContent #collapse-4 img {
     padding: 1px 10px 0 0;
-    width: 12em;
+    width: 21rem;
     border-radius: 25px;
 }
 
 #myContent .back_to_top {
     position: fixed;
-    right: 15px;
+    right: 4px;
     bottom: 15em;
     display: none;
     padding: .25em;
@@ -496,17 +504,6 @@ body {
     color: red;
 }
 
-@media screen and (max-width: 767px) {
-    #myFooter
-    {
-        text-align: center;
-    }
-    #myFooter .info
-    {
-        text-align: center;
-    }
-}
-
 #myFooter h2 {
     margin: 0;
 }
@@ -531,11 +528,13 @@ body {
 #myModal .panel-heading {
     background: #039be5;
     text-align: left;
+    border-radius: 5px;
 }
 
 #myModal .modal-body {
     background-color: #e1f5fe;
     color: #333;
+    padding-bottom: 0px;
 }
 
 #myModal .modal-body p {
@@ -565,15 +564,17 @@ body {
 }
 
 #myModal #collapseEleven img {
-    margin: 0 8px 0 0;
+    margin: 0 10px 0 0;
     padding: 0;
-    width: 13em;
+    width: 15rem;
+    border: 1px solid #039be5;
 }
 
 #myModal #collapseTwelve img {
     margin: 2px 10px 0 0;
     padding: 0;
     width: 12rem;
+    border: 1px solid #039be5;
 }
 
 #myModal .modal-footer {
@@ -606,7 +607,7 @@ body {
 
 #myModalForm .row {
     margin: 0;
-    background-color: #efebe9;
+    background-color: #BCAAA4;
 }
 
 #myModalForm .side-img {
@@ -621,7 +622,7 @@ body {
 
 #myModalForm .form {
     margin-top: 10px;
-    color: #333;
+    color: #333333;
     text-align: right;
     font-size: .95em;
 }
@@ -638,10 +639,12 @@ body {
     border: 0;
     background-color: #efebe9;
     font-style: italic;
+    border-radius: 5px;
+    padding-left: 5px;
 }
 
 #myModalForm .form button {
-    border: 1px solid #222;
+    border: 1px solid #8d6e63;
     background: #8d6e63;
     color: #fff;
     text-shadow: none;
@@ -652,6 +655,20 @@ body {
     text-align: right;;
 }
 
+@media screen and (max-width: 767px) {
+    #myContent .section-panel {
+      border-radius: 25px;
+    }
+    #myFooter
+    {
+        text-align: center;
+    }
+    #myFooter .info
+    {
+        text-align: center;
+    }
+}
+
 /* Custom Tooltip */
 a[mytitle]:hover:after {
     position: absolute;
@@ -660,7 +677,7 @@ a[mytitle]:hover:after {
     margin-top: 5px;
     padding: 0 0 0 20px;
     border-radius: 2px;
-    background: url(../images/favicon.ico) no-repeat;
+    background: url(../../favicon.ico) no-repeat;
     background-color: #000;
     box-shadow: 2px 0 4px #222;
     color: #fff;
@@ -678,7 +695,7 @@ a[mytitle2]:hover:after {
     margin-top: 3px;
     padding: 0 0 0 20px;
     border-radius: 2px;
-    background: url(../images/favicon.ico) no-repeat;
+    background: url(../../favicon.ico) no-repeat;
     background-color: #000;
     box-shadow: 2px 0 4px #222;
     color: #fff;
