--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,7 +1,7 @@
 /*
- *  Codetrotters Intro to Web Development Fall 2016
- *  CSS File Final Project
- *  Arturo Santiago-Rivera
+  Codetrotters Intro to Web Development Fall 2016
+  CSS File Final Project
+  Arturo Santiago-Rivera
  */
 
 body {
